# Clasificador_Entrenador-NBA

./: .gitignore  ARCHITECTURE_REPORT.md  NBA_Data_Sources_Report.md  README.md  api.py  cluster_means_report.xlsx  nba_active_player_stats_2024-25_Regular_Season_100min.xlsx  nba_active_player_stats_2025-26_Regular_Season_100min.xlsx  requirements.txt
backend/: .env.example  __init__.py  alembic.ini  api.py  docker-compose.yml  nba_data_processor.py  nba_player_analyzer.py  nba_player_data.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_base_tables.py  ad04e02dc85c_add_phase_2_models_game_log_shot_.py
backend/app/: config.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: cluster.py  data.py  health.py  historical.py  player_extras.py  players.py  teams.py
backend/app/etl/: advanced_stats.py  backfill.py  builders.py  pipeline.py
backend/app/repositories/: __init__.py  base.py  historical.py  player.py  stats.py  team.py
backend/app/services/: __init__.py  cache.py  clustering.py  data_update.py  elo.py  historical.py  player.py  report.py  similarity.py  team.py
backend/tests/: conftest.py  test_api.py  test_cache_service.py  test_data_update_api.py  test_data_update_service.py  test_elo_service.py  test_etl_builders.py  test_historical_api.py  test_historical_repository.py  test_historical_services.py  test_repositories.py  test_similarity_service.py
docs/superpowers/plans/: 2026-05-14-phase-2-data-engine-api.md  (+1 more)
frontend/: package-lock.json  package.json
(+6 files in other folders)
