[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-platform-backend"
version = "0.1.0"
description = "NBA Analytics Platform Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "xhtml2pdf>=0.2.15",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "nba-api>=1.11.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "redis>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
